[project]
name = "qme-ledger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pranav Avva", email = "pranav.avva@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.7",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt[crypto]>=5.5.1",
    "markdown>=3.9",
    "psycopg>=3.2.12",
]
